쓰기 벤치마크 완성 및 통합 보고서 작성
- 스트리밍 처리 전환 (OOM 해결), CountingInputStream 추가
- Tar+JSON 공정성 개선 (StringBuilder → 순차 디스크 쓰기)
- Avro null 필드 전처리 (fillNulls), 벤치마크 실행 스크립트 추가
- 통합 보고서 생성 (쓰기/읽기 성능, 이슈 조치, 필드 명세)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>